manifests/tenants/my-tenant/projects/example-client/apps/example-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-app
  namespace: example-client
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: example-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
